compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unreachable_code_after_case_subject_panics_1.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn main(a, b) {\n            case a, panic, b {\n                _, _, _ -> \"no warning here!\"\n            }\n        }\n        "
---
----- SOURCE CODE

        pub fn main(a, b) {
            case a, panic, b {
                _, _, _ -> "no warning here!"
            }
        }
        

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:3:28
  │
3 │             case a, panic, b {
  │                            ^

This code is unreachable because it comes after a `panic`.
