compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unreachable_code_analysis_treats_anonymous_functions_independently_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn main() {\n            let _ = fn() {\n              panic\n              \"warning here!\"\n            }\n            panic\n            \"warning here!\"\n        }\n        "
---
----- SOURCE CODE

        pub fn main() {
            let _ = fn() {
              panic
              "warning here!"
            }
            panic
            "warning here!"
        }
        

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:5:15
  │
5 │               "warning here!"
  │               ^^^^^^^^^^^^^^^

This code is unreachable because it comes after a `panic`.

warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:8:13
  │
8 │             "warning here!"
  │             ^^^^^^^^^^^^^^^

This code is unreachable because it comes after a `panic`.
