compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unreachable_warning_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() {\n          let _ = panic\n          1\n        }"
---
----- SOURCE CODE
pub fn main() {
          let _ = panic
          1
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:3:11
  │
3 │           1
  │           ^

This code is unreachable because it comes after a `panic`.
